[tool.poetry]
name = "proxy-rotator"
version = "0.1.0"
description = "A modern Python application"
authors = ["Szymon Kaszura <kaszuraszymon@gmail.com>"]
readme = "README.md"
packages = [{ include = "proxy_rotator", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
structlog = "^23.1.0"
sentry-sdk = "^2.22.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
mypy = "^1.5.1"
ruff = "^0.1.3"
pre-commit = "^3.4.0"
httpx = "^0.25.0"
bandit = "^1.7.5"
safety = "^2.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src"]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "D",   # pydocstyle
    "FBT", # boolean-trap
    "RUF", # ruff-specific rules
]

# Fix conflicting rules
ignore = [
    "D203", # one-blank-line-before-class
    "D213", # multi-line-summary-second-line
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]         # Skip assert statements warning
